--- a/app/src/main/res/layout/gastos_favoritos_list_item.xml
+++ b/app/src/main/res/layout/gastos_favoritos_list_item.xml
@@ -7,9 +7,10 @@
     android:orientation="vertical"
     android:layout_marginBottom="5dp"
     android:longClickable="true"
-    android:clickable="true"
+    android:clickable="false"
     android:focusable="false"
-    android:focusableInTouchMode="false">
+    android:focusableInTouchMode="false"
+    android:background="@drawable/list_selector">
 
     <LinearLayout
         android:layout_width="fill_parent"
