--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -7,7 +7,8 @@
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:orientation="vertical"
     android:layout_marginBottom="5dp"
-    android:onClick="tratarGasto">
+    android:longClickable="true"
+    android:background="@drawable/list_selector">
 
     <LinearLayout
         android:layout_width="fill_parent"
