Menú contextual para editar y borrar Gastos Programables

--- a/app/src/main/res/layout/gastos_programables_list_item.xml
+++ b/app/src/main/res/layout/gastos_programables_list_item.xml
@@ -7,7 +7,8 @@
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:orientation="vertical"
     android:layout_marginBottom="5dp"
-    android:onClick="tratarGastoProgramable">
+    android:background="@drawable/list_selector"
+    android:longClickable="true">
 
     <LinearLayout
         android:layout_width="fill_parent"
