--- a/app/src/main/res/layout/fragment_gastosprogramablesitem_list.xml
+++ b/app/src/main/res/layout/fragment_gastosprogramablesitem_list.xml
@@ -4,7 +4,8 @@
     tools:context="com.funebunny.xpdroid.main.ui.fragment.GastosProgramablesItemFragment"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="fill_parent"
