--- a/app/src/main/res/layout/fragment_objetivositem_list.xml
+++ b/app/src/main/res/layout/fragment_objetivositem_list.xml
@@ -16,6 +16,7 @@
 
     <ListView android:id="@+id/fragment_objetivositem_list_lv_lista" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        android:clickable="true" />
 
 </LinearLayout>
