--- a/app/src/main/res/layout/objetivos_list_item.xml
+++ b/app/src/main/res/layout/objetivos_list_item.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/objetivos_list_item_ll_main"
-    android:onClick="tratarObjetivo">
+    android:background="@drawable/list_selector"
+    android:longClickable="true">
 
     <LinearLayout
         android:orientation="horizontal"
