--- a/app/src/main/res/layout/activity_crear_presupuesto.xml
+++ b/app/src/main/res/layout/activity_crear_presupuesto.xml
@@ -6,20 +6,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearObjetivoActivity"
-    android:id="@+id/activity_crear_objetivo_ll_main"
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearPresupuestoActivity"
+    android:id="@+id/activity_crear_presupuesto_ll_main"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:id="@+id/activity_crear_objetivo_rl_periodo">
+        android:id="@+id/activity_crear_presupuesto_rl_periodo">
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_objetivo_sp_periodo"
+            android:id="@+id/activity_crear_presupuesto_sp_periodo"
             android:layout_centerInParent="true"
             android:entries="@array/periodo" />
     </RelativeLayout>
@@ -28,14 +28,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:id="@+id/activity_crear_objetivo_rl_importe">
+        android:id="@+id/activity_crear_presupuesto_rl_importe">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/activity_crear_objetivo_et_importe"
+            android:id="@+id/activity_crear_presupuesto_et_importe"
             android:layout_centerInParent="true"
             android:hint="@string/importe" />
     </RelativeLayout>
@@ -44,7 +44,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:id="@+id/activity_crear_objetivo_rl_guardar">
+        android:id="@+id/activity_crear_presupuesto_rl_guardar">
 
         <Button
             android:layout_width="wrap_content"
@@ -52,6 +52,6 @@
             android:text="@string/guardar"
             android:id="@+id/button"
             android:layout_centerInParent="true"
-            android:onClick="guardarObjetivo" />
+            android:onClick="guardarPresupuesto" />
     </RelativeLayout>
 </LinearLayout>
