--- a/app/src/main/res/layout/fragment_presupuestoitem_list.xml
+++ b/app/src/main/res/layout/fragment_presupuestoitem_list.xml
@@ -2,19 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.funebunny.xpdroid.main.ui.fragment.ObjetivosItemFragment"
+    tools:context="com.funebunny.xpdroid.main.ui.fragment.PresupuestoItemFragment"
     android:orientation="vertical"
-    android:id="@+id/fragment_objetivositem_list_ll_main">
+    android:id="@+id/fragment_presupuestoitem_list_ll_main">
 
-    <TextView android:id="@+id/fragment_objetivositem_list_tv_titulo" android:layout_width="wrap_content"
+    <TextView android:id="@+id/fragment_presupuestoitem_list_tv_titulo" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:gravity="center"
         android:layout_margin="10dp"
-        android:text="@string/objetivos_titulo"
+        android:text="@string/presupuesto_titulo"
         android:textColor="#ff0000ff"
         android:textSize="@dimen/abc_text_size_medium_material"
         android:textStyle="bold|italic" />
 
-    <ListView android:id="@+id/fragment_objetivositem_list_lv_lista" android:layout_width="match_parent"
+    <ListView android:id="@+id/fragment_presupuestoitem_list_lv_lista" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:clickable="true" />
