--- a/app/src/main/res/menu/menu_crear_presupuesto.xml
+++ b/app/src/main/res/menu/menu_crear_presupuesto.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearObjetivoActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearPresupuestoActivity">
     <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
         <!--android:orderInCategory="100" app:showAsAction="never" />-->
 
-    <item android:id="@+id/action_crear_objetivo"
-        android:title="@string/action_crear_objetivo"
+    <item android:id="@+id/action_crear_presupuesto"
+        android:title="@string/action_crear_presupuesto"
         android:icon="@drawable/ic_action_new"
         app:showAsAction="always" />
 
