--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,12 +9,73 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:rowCount="1"
     tools:context=".MainActivity$PlaceholderFragment"
-    android:id="@+id/fragment_main_fl_main">
+    android:id="@+id/fragment_main_rl_main"
+    android:orientation="vertical">
 
-    <GridView
-        android:id="@+id/fragment_main_gv_favoritos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:id="@+id/fragment_main_ll"
+        android:layout_weight="1">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/fragment_main_tv_mes"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:capitalize="words"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/fragment_main_tv_total_mensual"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
+
+    <ExpandableListView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:id="@+id/fragment_main_el_alerta_presupuesto"
+        android:layout_weight="2" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_below="@+id/fragment_main_tv_alerta_presupuesto"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/fragment_main_rl_favoritos"
+        android:layout_weight="3">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_main_tv_favoritos"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_centerInParent="true" />
+
+        <GridView
+            android:id="@+id/fragment_main_gv_favoritos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="false"
+            android:layout_marginTop="0dp" />
+
+    </RelativeLayout>
+
+</LinearLayout>
