--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,6 +42,14 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:id="@+id/fragment_totales_rl"
+        android:layout_weight="1">
+    </RelativeLayout>
+
     <ExpandableListView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
