--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -10,76 +10,144 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoActivity">
 
-    <RelativeLayout
-        android:id="@+id/activity_crear_gasto_rl_descripcion"
+    <LinearLayout
+        android:id="@+id/activity_crear_gasto_rl_importe"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/importe_sep1"></RelativeLayout>
 
         <EditText
-            android:id="@+id/activity_crear_gasto_et_descripcion"
-            android:layout_width="wrap_content"
+            android:id="@+id/activity_crear_gasto_et_importe"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:hint="@string/descripcion" />
-    </RelativeLayout>
+            android:ems="10"
+            android:hint="@string/importe"
+            android:inputType="numberDecimal"
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            style="@style/XPDroidEditText"/>
 
-    <RelativeLayout
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/importe_sep2"
+            android:layout_weight="1"></RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/activity_crear_gasto_rl_fecha"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/fecha_sep1"
+            android:layout_weight="1"></RelativeLayout>
 
         <EditText
             android:id="@+id/activity_crear_gasto_et_fecha"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:ems="10"
             android:hint="@string/fecha"
-            android:inputType="date" />
+            android:inputType="date"
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            android:enabled="false"
+            android:editable="false"
+            android:clickable="false" />
 
         <ImageButton
             android:id="@+id/activity_crear_gasto_ib_date_picker"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/activity_crear_gasto_et_fecha"
             android:layout_toEndOf="@+id/activity_crear_gasto_et_fecha"
             android:layout_toRightOf="@+id/activity_crear_gasto_et_fecha"
             android:src="@drawable/ic_calendar"
-            android:onClick="mostrarDatePicker" />
-        />
-    </RelativeLayout>
+            android:onClick="mostrarDatePicker"
+            android:layout_weight=".5"
+            android:layout_gravity="center" />
 
-    <RelativeLayout
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:id="@+id/fecha_sep2"></RelativeLayout>
+        />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/activity_crear_gasto_rl_categoria"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/categoria_sep1"></RelativeLayout>
 
         <Spinner
             android:id="@+id/activity_crear_gasto_sp_categoria"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:entries="@array/categorias" />
-    </RelativeLayout>
+            android:entries="@array/categorias"
+            android:layout_weight="2"
+            android:layout_gravity="center" />
 
-    <RelativeLayout
-        android:id="@+id/activity_crear_gasto_rl_importe"
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/categoria_sep2"></RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/activity_crear_gasto_rl_descripcion"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/descripcion_sep1"></RelativeLayout>
 
         <EditText
-            android:id="@+id/activity_crear_gasto_et_importe"
-            android:layout_width="wrap_content"
+            android:id="@+id/activity_crear_gasto_et_descripcion"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:ems="10"
-            android:hint="@string/importe"
-            android:inputType="numberDecimal" />
-    </RelativeLayout>
+            android:hint="@string/descripcion"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            style="@style/XPDroidEditText" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/descripcion_sep2"></RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/activity_crear_gasto_rl_guardar"
