--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,10 +5,29 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!--<style name="XPDroidTheme" parent="@android:style/Theme.Holo.Light">-->
+        <!--<item name="android:actionBarStyle">@style/XPDroidActionBar</item>-->
+    <!--</style>-->
+
+    <!--<style name="XPDroidActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">-->
+        <!--<item name="android:background">#FF0091FF</item>-->
+    <!--</style>-->
+
     <style name="XPDroidEditText" >
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:inputType">textCapSentences</item>
     </style>
+
+    <!--<style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">-->
+        <!--<item name="android:background"  tools:ignore="NewApi">@color/red</item>-->
+        <!--<item name="background">@color/red</item>-->
+    <!--</style>-->
+
+    <!--<style name="CustomActionBarTheme" parent="@style/Theme.AppCompat.Light">-->
+        <!--<item name="android:actionBarStyle"   tools:ignore="NewApi">@style/MyActionBar</item>-->
+        <!--<item name="actionBarStyle">@style/MyActionBar</item>-->
+
+    <!--</style>-->
 
 </resources>
