Vista de Historial de Gatos - en desarrollo

--- a/app/src/main/res/layout/fragment_historialgastositem_list.xml
+++ b/app/src/main/res/layout/fragment_historialgastositem_list.xml
@@ -16,12 +16,14 @@
         android:textSize="@dimen/abc_text_size_medium_material"
         android:textStyle="bold|italic"
         android:layout_margin="10dp"
-        android:layout_gravity="center_vertical"
-        android:text="@string/gastos_mes_titulo" />
+        android:layout_gravity="center"
+        android:text="@string/historial_gastos_titulo"
+        android:id="@+id/fragment_historialgastos_tv_titulo" />
 
     <ExpandableListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_historialgastos_el_gastos" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_historialgastos_el_gastos"
+        android:divider="@drawable/abc_list_divider_mtrl_alpha" />
 
 </LinearLayout>
