--- a/app/src/main/res/layout/historial_gastos_header.xml
+++ b/app/src/main/res/layout/historial_gastos_header.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/historial_gastos_header_ll_main">
+    android:layout_height="wrap_content"
+    android:id="@+id/historial_gastos_header_ll_main"
+    android:clickable="false"
+    android:background="#d6d6d6"
+    android:longClickable="false">
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:id="@+id/historial_gastos_header_tv_margen"
+        android:layout_weight="0.5" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
         android:id="@+id/historial_gastos_header_tv_mes"
-        android:layout_weight="1" />
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_weight="2" />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/historial_gastos_header_tv_anio"
-        android:layout_weight="1" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
         android:id="@+id/historial_gastos_header_tv_total"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center_vertical|right"
+        android:layout_marginRight="10dp" />
+
 </LinearLayout>
