--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -2,8 +2,8 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/historial_gastos_list_item"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:orientation="vertical"
     android:layout_marginBottom="5dp"
@@ -11,38 +11,44 @@
     android:background="@drawable/list_selector">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
         <TextView android:id="@+id/historial_gastos_lista_categoria"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
-            android:textColor="#ff000000" />
+            android:textColor="#ff000000"
+            android:layout_weight="1"
+            android:layout_gravity="center" />
 
         <TextView android:id="@+id/historial_gastos_lista_fecha"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:gravity="right"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal" >
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
         <TextView android:id="@+id/historial_gastos_lista_descripcion"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:ellipsize="end"
@@ -50,10 +56,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
             android:singleLine="true"
-            android:maxWidth="180dp" />
+            android:maxWidth="180dp"
+            android:layout_weight="1"
+            android:layout_gravity="center" />
 
         <TextView android:id="@+id/historial_gastos_lista_importe"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
@@ -62,7 +70,9 @@
             android:layout_marginBottom="5dp"
             android:textStyle="bold"
             android:textColor="#ffff8100"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:layout_weight="1"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
