--- a/app/src/main/res/layout/activity_crear_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_favorito.xml
@@ -10,50 +10,89 @@
     android:id="@+id/activity_crear_gasto_favorito_ll_main"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_descripcion"
-        android:layout_weight="1">
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_favorito_et_descripcion"
-            android:layout_centerInParent="true"
-            android:inputType="textCapSentences"
-            android:hint="@string/descripcion" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_categoria"
-        android:layout_weight="1">
-
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
-            android:layout_centerInParent="true"
-            android:entries="@array/categorias" />
-    </RelativeLayout>
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/activity_crear_gasto_favorito_rl_importe"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/activity_crear_gasto_favorito_et_importe"
             android:layout_centerInParent="true"
-            android:hint="@string/importe" />
-    </RelativeLayout>
+            android:hint="@string/importe"
+            android:layout_weight="2"
+            style="@style/XPDroidEditText"
+            android:layout_gravity="center" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_categoria"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+
+        <Spinner
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
+            android:layout_centerInParent="true"
+            android:entries="@array/categorias"
+            android:layout_gravity="center"
+            android:layout_weight="2" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_descripcion"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_crear_gasto_favorito_et_descripcion"
+            android:layout_centerInParent="true"
+            android:inputType="textCapSentences"
+            android:hint="@string/descripcion"
+            android:layout_weight="2"
+            style="@style/XPDroidEditText"
+            android:layout_gravity="center" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="fill_parent"
