--- a/app/src/main/res/layout/fragment_totalesitem_list.xml
+++ b/app/src/main/res/layout/fragment_totalesitem_list.xml
@@ -7,158 +7,60 @@
     android:orientation="vertical"
     android:id="@+id/fragment_totalesitem_list_ll_main">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/fragment_totalesitem_list_ll_datos"
         android:layout_weight="3">
 
-        <RadioGroup
+        <RadioButton
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3">
+            android:layout_height="0dp"
+            android:id="@+id/fragment_totalesitem_list_rb_diario"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:onClick="actualizarTotalPredeterminado" />
 
-            <!--<LinearLayout-->
-                <!--android:orientation="horizontal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:id="@+id/fragment_totalesitem_list_ll_anual"-->
-                <!--android:layout_weight="1">-->
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/fragment_totalesitem_list_rb_semanal"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:onClick="actualizarTotalPredeterminado" />
 
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:text="Large Text"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_texto_anual"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/fragment_totalesitem_list_rb_mensual"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:onClick="actualizarTotalPredeterminado" />
 
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_total_anual"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-            <!--</LinearLayout>-->
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/fragment_totalesitem_list_rb_anual"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:onClick="actualizarTotalPredeterminado" />
 
-            <!--<LinearLayout-->
-                <!--android:orientation="horizontal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:id="@+id/fragment_totalesitem_list_ll_mensual"-->
-                <!--android:layout_weight="1" >-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:text="Large Text"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_texto_mensual"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_total_mensual"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-            <!--</LinearLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:orientation="horizontal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:id="@+id/fragment_totalesitem_list_ll_semanal"-->
-                <!--android:layout_weight="1" >-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:text="Large Text"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_texto_semanal"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_total_semanal"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-            <!--</LinearLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:orientation="horizontal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:id="@+id/fragment_totalesitem_list_ll_diario"-->
-                <!--android:layout_weight="1" >-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:text="Large Text"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_texto_diario"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="0dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-                    <!--android:id="@+id/fragment_totalesitem_list_tv_total_diario"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:layout_weight="2" />-->
-            <!--</LinearLayout>-->
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_totalesitem_list_rb_diario"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
-                android:onClick="actualizarTotalPredeterminado" />
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_totalesitem_list_rb_semanal"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
-                android:onClick="actualizarTotalPredeterminado" />
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_totalesitem_list_rb_mensual"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
-                android:onClick="actualizarTotalPredeterminado" />
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_totalesitem_list_rb_anual"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
-                android:onClick="actualizarTotalPredeterminado" />
-
-        </RadioGroup>
-
-    </LinearLayout>
+    </RadioGroup>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/fragment_totalesitem_list_ll_separador"
-        android:layout_weight="1"></LinearLayout>
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/seleccione_total_predeterminado"
+            android:id="@+id/fragment_totalesitem_list_tv_info"
+            android:layout_gravity="center"
+            android:gravity="center_vertical|center|center_horizontal" />
+
+    </LinearLayout>
 </LinearLayout>
