--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,6 +24,7 @@
         <item>@string/navdrawitem4</item>
         <item>@string/navdrawitem5</item>
         <item>@string/navdrawitem6</item>
+        <item>@string/navdrawitem7</item>
     </string-array>
 
 
