--- a/app/src/main/res/layout/activity_crear_gasto_programable.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_programable.xml
@@ -1,17 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_crear_gasto_programable_ll_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoProgramableActivity"
-    android:id="@+id/activity_crear_gasto_programable_ll_main"
-    android:orientation="vertical">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoProgramableActivity">
 
     <LinearLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_importe"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_importe"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -21,16 +23,17 @@
             android:layout_weight="1"></RelativeLayout>
 
         <EditText
+            android:id="@+id/activity_crear_gasto_programable_et_importe"
+            style="@style/XPDroidEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:ems="10"
-            android:id="@+id/activity_crear_gasto_programable_et_importe"
-            android:hint="@string/importe"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:layout_weight="2"
-            style="@style/XPDroidEditText"
-            android:layout_gravity="center" />
+            android:ems="10"
+            android:hint="@string/importe"
+            android:inputType="numberDecimal"
+            android:nextFocusDown="@+id/activity_crear_gasto_programable_et_descripcion" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -39,9 +42,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_categoria"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_categoria"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -51,13 +54,13 @@
             android:layout_weight="1"></RelativeLayout>
 
         <Spinner
+            android:id="@+id/activity_crear_gasto_programable_sp_categoria"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_programable_sp_categoria"
-            android:entries="@array/categorias"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:layout_weight="2"
-            android:layout_gravity="center" />
+            android:entries="@array/categorias" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -66,9 +69,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_horario"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_horario"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -78,28 +81,28 @@
             android:layout_weight="1"></RelativeLayout>
 
         <EditText
+            android:id="@+id/activity_crear_gasto_programable_et_horario"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="time"
-            android:ems="10"
-            android:id="@+id/activity_crear_gasto_programable_et_horario"
-            android:hint="@string/horario"
-            android:enabled="false"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:ems="10"
+            android:enabled="false"
+            android:hint="@string/horario"
+            android:inputType="time" />
 
         <ImageButton
+            android:id="@+id/activity_crear_gasto_programable_ib_time_picker"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_programable_ib_time_picker"
-            android:src="@drawable/ic_time"
             android:layout_alignBottom="@+id/activity_crear_gasto_programable_et_horario"
-            android:layout_toRightOf="@+id/activity_crear_gasto_programable_et_horario"
-            android:layout_toEndOf="@+id/activity_crear_gasto_programable_et_horario"
-            android:onClick="mostrarTimePicker"
             android:layout_gravity="center"
-            android:layout_weight=".5" />
+            android:layout_toEndOf="@+id/activity_crear_gasto_programable_et_horario"
+            android:layout_toRightOf="@+id/activity_crear_gasto_programable_et_horario"
+            android:layout_weight=".5"
+            android:onClick="mostrarTimePicker"
+            android:src="@drawable/ic_time" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -108,74 +111,47 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_repeticion"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_repeticion"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <RelativeLayout
+            android:id="@+id/activity_crear_gasto_programable_repeticion_sep1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/activity_crear_gasto_programable_repeticion_sep1"
             android:layout_weight=".5"></RelativeLayout>
 
         <Spinner
+            android:id="@+id/activity_crear_gasto_programable_sp_repeticion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_programable_sp_repeticion"
-            android:entries="@array/repeticion"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:entries="@array/repeticion" />
 
         <Spinner
+            android:id="@+id/activity_crear_gasto_programable_sp_dias_semana"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_programable_sp_dias_semana"
-            android:entries="@array/dias_semana"
-            android:visibility="gone"
             android:layout_gravity="center_vertical"
-            android:gravity="center_vertical" />
+            android:entries="@array/dias_semana"
+            android:gravity="center_vertical"
+            android:visibility="gone" />
 
         <RelativeLayout
+            android:id="@+id/activity_crear_gasto_programable_repeticion_sep2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/activity_crear_gasto_programable_repeticion_sep2"
             android:layout_weight=".5"></RelativeLayout>
 
     </LinearLayout>
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:id="@+id/activity_crear_gasto_programable_rl_repeticion"-->
-        <!--android:layout_weight="1"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<Spinner-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/activity_crear_gasto_programable_sp_repeticion"-->
-            <!--android:entries="@array/repeticion"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_alignParentLeft="false"-->
-            <!--android:layout_centerInParent="true" />-->
-
-        <!--<Spinner-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/activity_crear_gasto_programable_sp_dias_semana"-->
-            <!--android:entries="@array/dias_semana"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_toEndOf="@id/activity_crear_gasto_programable_sp_repeticion" />-->
-
-    <!--</RelativeLayout>-->
-
     <LinearLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_descripcion"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_descripcion"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -185,14 +161,14 @@
             android:layout_weight="1"></RelativeLayout>
 
         <EditText
+            android:id="@+id/activity_crear_gasto_programable_et_descripcion"
+            style="@style/XPDroidEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/XPDroidEditText"
-            android:id="@+id/activity_crear_gasto_programable_et_descripcion"
-            android:hint="@string/descripcion"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:layout_weight="2"
-            android:layout_gravity="center" />
+            android:hint="@string/descripcion" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -201,17 +177,17 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/activity_crear_gasto_programable_rl_guardar"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/activity_crear_gasto_programable_rl_guardar"
         android:layout_weight="1">
 
         <Button
+            android:id="@+id/activity_crear_gasto_programable_bt_guardar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/guardar"
-            android:id="@+id/activity_crear_gasto_programable_bt_guardar"
             android:layout_centerInParent="true"
-            android:onClick="guardarGastoProgramable" />
+            android:onClick="guardarGastoProgramable"
+            android:text="@string/guardar" />
     </RelativeLayout>
 </LinearLayout>
