--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,8 +20,8 @@
         android:layout_weight="1">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/fragment_main_tv_periodo"
             android:layout_weight="1"
@@ -31,14 +31,15 @@
             android:layout_gravity="center" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/fragment_main_tv_total"
             android:layout_weight="1"
             android:textAlignment="center"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            style="@style/XPDroidTextViewImporte" />
 
     </LinearLayout>
 
