--- a/app/src/main/res/layout/gastos_favoritos_list_item.xml
+++ b/app/src/main/res/layout/gastos_favoritos_list_item.xml
@@ -3,61 +3,69 @@
     android:id="@+id/gastos_favoritos_list_item_ll_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:orientation="vertical"
     android:layout_marginBottom="5dp"
-    android:longClickable="true"
+    android:background="@drawable/list_selector"
     android:clickable="false"
     android:focusable="false"
     android:focusableInTouchMode="false"
-    android:background="@drawable/list_selector">
+    android:longClickable="true"
+    android:orientation="vertical"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall">
 
     <LinearLayout
+        android:id="@+id/gastos_favoritos_list_item_ll_datos1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:orientation="horizontal"
-        android:id="@+id/gastos_favoritos_list_item_ll_datos1">
+        android:layout_weight="1">
 
-        <TextView android:id="@+id/gastos_favoritos_list_item_tv_categoria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:layout_marginRight="10dp"
+        <TextView
+            android:id="@+id/gastos_favoritos_list_item_tv_categoria"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
+            android:textColor="#ff000000"
+            android:textSize="@dimen/abc_text_size_medium_material"
             android:textStyle="bold"
-            android:textColor="#ff000000" />
+            android:gravity="left|center_vertical"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/gastos_favoritos_list_item_ll_datos2"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:orientation="horizontal"
-        android:id="@+id/gastos_favoritos_list_item_ll_datos2">
+        android:layout_weight="1">
 
-        <TextView android:id="@+id/gastos_favoritos_list_item_tv_descripcion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:ellipsize="end"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+        <TextView
+            android:id="@+id/gastos_favoritos_list_item_tv_descripcion"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:singleLine="true"
-            android:maxWidth="180dp" />
-
-        <TextView android:id="@+id/gastos_favoritos_list_item_tv_importe"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_weight="1"
+            android:gravity="left|center_vertical" />
+
+        <TextView
+            android:id="@+id/gastos_favoritos_list_item_tv_importe"
+            style="@style/XPDroidTextViewImporte"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
-            android:textStyle="bold"
-            android:textColor="#ffff8100"
-            android:singleLine="true" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center_vertical|right"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
