--- a/app/src/main/res/layout/gastos_programables_list_item.xml
+++ b/app/src/main/res/layout/gastos_programables_list_item.xml
@@ -1,68 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gastos_programables_list_item"
+    android:id="@+id/gastos_programables_list_item_ll_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:orientation="vertical"
     android:layout_marginBottom="5dp"
     android:background="@drawable/list_selector"
-    android:longClickable="true">
+    android:longClickable="true"
+    android:orientation="vertical"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall">
 
     <LinearLayout
+        android:id="@+id/gastos_programables_list_item_ll_datos_1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
-        <TextView android:id="@+id/gastos_programables_lista_categoria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:layout_marginRight="10dp"
+        <TextView
+            android:id="@+id/gastos_programables_lista_categoria"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:textStyle="bold"
-            android:textColor="#ff000000" />
+            android:layout_weight="1"
+            android:gravity="left|center_vertical"
+            android:textColor="#ff000000"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold" />
 
-        <TextView android:id="@+id/gastos_programables_lista_fecha"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:layout_marginRight="10dp"
+        <TextView
+            android:id="@+id/gastos_programables_lista_fecha"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:gravity="right"
-            android:layout_marginTop="5dp" />
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical|right"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/gastos_programables_list_item_ll_datos_2"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal" >
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-        <TextView android:id="@+id/gastos_programables_lista_descripcion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:ellipsize="end"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+        <TextView
+            android:id="@+id/gastos_programables_lista_descripcion"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:singleLine="true"
-            android:maxWidth="180dp" />
-
-        <TextView android:id="@+id/gastos_programables_lista_importe"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxWidth="180dp"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/gastos_programables_lista_importe"
+            style="@style/XPDroidTextViewImporte"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
-            android:textStyle="bold"
-            android:textColor="#ffff8100"
-            android:singleLine="true" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_weight="1"
+            android:gravity="right" />
 
     </LinearLayout>
 
