--- a/app/src/main/res/layout/historial_gastos_header.xml
+++ b/app/src/main/res/layout/historial_gastos_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/historial_gastos_header_ll_main"
     android:clickable="false"
     android:background="#d6d6d6"
@@ -15,19 +15,21 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/historial_gastos_header_tv_mes"
-        android:gravity="center_vertical|center_horizontal"
+        android:gravity="left|center_vertical"
         android:layout_weight="2" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/historial_gastos_header_tv_total"
         android:layout_weight="1"
         android:gravity="center_vertical|right"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        style="@style/XPDroidTextViewImporte"
+        android:textStyle="bold" />
 
 </LinearLayout>
