--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/historial_gastos_list_item"
+    android:id="@+id/historial_gastos_list_item_ll_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
@@ -14,11 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:id="@+id/historial_gastos_list_item_ll_datos_1">
 
         <TextView android:id="@+id/historial_gastos_lista_categoria"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
@@ -26,15 +27,16 @@
             android:textStyle="bold"
             android:textColor="#ff000000"
             android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:gravity="left|center_vertical" />
 
         <TextView android:id="@+id/historial_gastos_lista_fecha"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:gravity="right"
+            android:gravity="center_vertical|right"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:layout_gravity="center" />
@@ -45,11 +47,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:id="@+id/historial_gastos_list_item_ll_datos_2">
 
         <TextView android:id="@+id/historial_gastos_lista_descripcion"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:ellipsize="end"
             android:layout_marginRight="10dp"
@@ -58,20 +61,20 @@
             android:singleLine="true"
             android:maxWidth="180dp"
             android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:gravity="left|center_vertical" />
 
         <TextView android:id="@+id/historial_gastos_lista_importe"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:gravity="right"
+            android:gravity="center_vertical|right"
             android:layout_marginBottom="5dp"
-            android:textStyle="bold"
-            android:textColor="#ffff8100"
             android:singleLine="true"
             android:layout_weight="1"
+            style="@style/XPDroidTextViewImporte"
             android:layout_gravity="center" />
 
     </LinearLayout>
