--- a/app/src/main/res/values-sw600dp/refs.xml
+++ b/app/src/main/res/values-sw600dp/refs.xml
@@ -7,7 +7,6 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="notificaciones" type="layout">@layout/fragment_totalesitem_list</item>
 
     <!--
     Layout alias to replace the single-pane version of the layout with a
@@ -16,6 +15,6 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="fragment_presupuestoitem" type="layout">@layout/fragment_presupuestoitem_list</item>
+    <!--<item name="fragment_presupuestoitem" type="layout">@layout/fragment_presupuestoitem_list</item>-->
 
 </resources>
