--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,12 @@
         <item name="android:inputType">textCapSentences</item>
     </style>
 
+    <style name="XPDroidTextViewImporte" >
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textColor">#006fff</item>
+    </style>
+
     <!--<style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">-->
         <!--<item name="android:background"  tools:ignore="NewApi">@color/red</item>-->
         <!--<item name="background">@color/red</item>-->
