--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -27,7 +27,6 @@
             android:textStyle="bold"
             android:textColor="#ff000000"
             android:layout_weight="1"
-            android:layout_gravity="center"
             android:gravity="left|center_vertical" />
 
         <TextView android:id="@+id/historial_gastos_lista_fecha"
@@ -38,8 +37,7 @@
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical|right"
             android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -61,7 +59,6 @@
             android:singleLine="true"
             android:maxWidth="180dp"
             android:layout_weight="1"
-            android:layout_gravity="center"
             android:gravity="left|center_vertical" />
 
         <TextView android:id="@+id/historial_gastos_lista_importe"
@@ -74,8 +71,7 @@
             android:layout_marginBottom="5dp"
             android:singleLine="true"
             android:layout_weight="1"
-            style="@style/XPDroidTextViewImporte"
-            android:layout_gravity="center" />
+            style="@style/XPDroidTextViewImporte" />
 
     </LinearLayout>
 
